[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "more-itertools>=8.12.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
    "ipython>=8.1.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
