[tool.poetry]
name = "PDDL Planner"
version = "1.0"
description = "Classical planning in Python. Originally designed and developed by Mau Magnaguagno in 2015 and extended by others."
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"